[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "itcs435"
description = "itcs435 - reference implementation for an Intermodal Transportation Control System based on VDV435"
authors = [{ name = "Sebastian Knopf", email = "mail@sebastian-knopf.de" }]
readme = "README.md"
license = {text = "Apache License (2.0)"}
dependencies = [
    "click",
    "pymongo",
    "xmltodict"
]
requires-python = ">=3.10"

dynamic = ["version"]

[project.optional-dependencies]
worker = [
    "paho-mqtt"
]

server = [
    "fastapi",
    "uvicorn"
]

all = [
    "vcc[worker,server]"
]

[tool.setuptools_scm]
write_to = "src/itcs435/common/version.py"