[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "itcs435"
description = "itcs435 - reference implementation for an Intermodal Transportation Control System based on VDV435"
authors = [{ name = "Sebastian Knopf", email = "mail@sebastian-knopf.de" }]
readme = "README.md"
license = {text = "Apache License (2.0)"}
dependencies = [
    "click",
    "fastapi",
    "lxml",
    "paho-mqtt",
    "pydantic",
    "pymongo",
    "pyyaml",
    "requests",
    "uvicorn",
    "xmltodict"
]
requires-python = ">=3.10"

dynamic = ["version"]

[tool.setuptools_scm]
write_to = "src/itcs435/common/version.py"