[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "avl2gtfsrt"
description = "Processor to match AVL data to GTFS data and provide a GTFS-RT feed with tripUpdates and vehiclePositions"
authors = [{ name = "Sebastian Knopf", email = "mail@sebastian-knopf.de" }]
readme = "README.md"
license = {text = "Apache License (2.0)"}
dependencies = [
    "click",
    "dacite",
    "polyline",
    "fastapi",
    "gtfs-realtime-bindings",
    "lxml",
    "paho-mqtt",
    "pydantic",
    "pymongo",
    "pytz",
    "pyyaml",
    "pyproj",
    "pyzmq",
    "requests",
    "shapely",
    "uvicorn",
    "xmltodict"
]
requires-python = ">=3.10"

dynamic = ["version"]

[tool.setuptools_scm]
write_to = "src/avl2gtfsrt/common/version.py"